fix: fix the animation-play-state: paused. It was causing problem on mobile

--- a/src/app/components/partials/clients-carrosel/clients-carrosel.component.scss
+++ b/src/app/components/partials/clients-carrosel/clients-carrosel.component.scss
@@ -56,13 +56,9 @@ section {
   background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
 }
 
-.logos:hover .logos-slide {
-  animation-play-state: paused;
-}
-
 .logos-slide {
   display: inline-block;
-  animation: 35s slide infinite linear;
+  animation: 20s slide infinite linear;
 }
 
 .logos-slide img {
